--- a/service-nodeport.yaml
+++ b/service-nodeport.yaml
@@ -35,4 +35,6 @@ spec:
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
+  externalIPs:
+  - 10.193.113.106
 
